--- a/server/templates/upload.html
+++ b/server/templates/upload.html
@@ -3,5 +3,9 @@
         <title>Test</title>
     </head>
     <body>
+        <form enctype="multipart/form-data" method="post" action="/upload">
+            <p>Picture: <input type="file" name="shot_file"></p>
+            <p><input type="submit" value="upload" /></p>
+        </form>
     </body>
 </html>
