--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -5,55 +5,44 @@
       html, body, #map-canvas { height: 100%; margin: 0; padding: 0;}
     </style>
 	<!-- Magnific Popup core CSS file -->
-	<link rel="stylesheet" href="magnific-popup/magnific-popup.css"> 
+	<link rel="stylesheet" href="/static/css_js/magnific-popup.css"> 
 
 	<!-- jQuery 1.7.2+ or Zepto.js 1.0+ -->
-	<script src="magnific-popup/jquery.min.js"></script> 
+	<script src="/static/css_js/jquery.min.js"></script> 
 
 	<!-- Magnific Popup core JS file -->
-	<script src="magnific-popup/magnific-popup.js"></script>
+	<script src="/static/css_js/magnific-popup.js"></script>
     <script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAmUQ5EIxnPrGLan9LDADHK_TKPysi5jSA">
     </script>
     <script type="text/javascript">
       function initialize() {
         var map = new google.maps.Map(document.getElementById('map-canvas'),mapOptions);
-		var myLatlng = new google.maps.LatLng(-25.363882,131.044922);
 		
+        {% for snap in records %}
+
+        var myLatlng = new google.maps.LatLng({{snap[4]}},{{snap[3]}});
 		var marker1 = new google.maps.Marker({
 			position: myLatlng,
-			title:"Hello World!"
+			title:"{{snap[2]}}"
 		});
 		google.maps.event.addListener(marker1, 'click', function() {
 		$.magnificPopup.open({
-		items: {
-		src: '<div width="450px" height="800px" class="white-popup" style="background-color:white"><img width="400px" src="imgs/BrokenRoad.jpg"/><br/>Dynamically created popup</div>', 
-		},
-		type: 'inline'
+		  items: {
+		      src: '<div width="450px" height="800px" class="white-popup" style="background-color:white"><img width="400px" src="/static/{{snap[0]}}"/><br/>{{snap[1]}}<br/>{{snap[2]}}</div>', 
+		      },
+		      type: 'inline'
+		  });
+          map.setZoom(17);
+          map.setCenter(marker1.getPosition());
 		});
-		map.setZoom(17);
-		map.setCenter(marker1.getPosition());
-		});
-
-		// To add the marker to the map, call setMap();
+        // To add the marker to the map, call setMap();
 		marker1.setMap(map);
-		//Second mock datapoint
-		var myLatlng2 = new google.maps.LatLng(-25.463882,131.144922);
-		var marker2 = new google.maps.Marker({
-			position: myLatlng2,
-			title:"Hello World 2!"
-		});
-		google.maps.event.addListener(marker2, 'click', function() {
-		map.setZoom(17);
-		map.setCenter(marker2.getPosition());
-		});
-		// To add the marker to the map, call setMap();
-		marker2.setMap(map);
-		}
+
+        {% endfor %}
+
 		google.maps.event.addDomListener(window, 'load', initialize);
-
-
-		var myLatlng = new google.maps.LatLng(-25.363882,131.044922);
+        var myLatlng = new google.maps.LatLng(-25.363882,131.044922);
 		var mapOptions = {
 			zoom: 12,
 			center: myLatlng
