--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -16,33 +16,46 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAmUQ5EIxnPrGLan9LDADHK_TKPysi5jSA">
     </script>
     <script type="text/javascript">
+      function success(position) {
+        lat = position.coords.latitude;
+        lng = position.coords.longitude;
+      }
+
       function initialize() {
         var map = new google.maps.Map(document.getElementById('map-canvas'),mapOptions);
 		
-        {% for snap in records %}
-
-        var myLatlng = new google.maps.LatLng({{snap[4]}},{{snap[3]}});
-		var marker1 = new google.maps.Marker({
+        {% for s in records %}
+        var myLatlng = new google.maps.LatLng({{s[4]}},{{s[3]}});
+		var marker{{loop.index}} = new google.maps.Marker({
 			position: myLatlng,
-			title:"{{snap[2]}}"
+			title:"{{s[2]}}"
 		});
-		google.maps.event.addListener(marker1, 'click', function() {
+		google.maps.event.addListener(marker{{loop.index}}, 'click', function() {
 		$.magnificPopup.open({
 		  items: {
-		      src: '<div width="450px" height="800px" class="white-popup" style="background-color:white"><img width="400px" src="/static/{{snap[0]}}"/><br/>{{snap[1]}}<br/>{{snap[2]}}</div>', 
+		      src: '<div width="450px" height="800px" class="white-popup" style="background-color:white"><img width="400px" src="/static/{{s[0]}}"/><br/>{{s[1]}}<br/>{{s[2]}}</div>', 
 		      },
 		      type: 'inline'
 		  });
           map.setZoom(17);
-          map.setCenter(marker1.getPosition());
+          map.setCenter(marker{{loop.index}}.getPosition());
 		});
         // To add the marker to the map, call setMap();
-		marker1.setMap(map);
-
+		marker{{loop.index}}.setMap(map);
         {% endfor %}
 
-		google.maps.event.addDomListener(window, 'load', initialize);
-        var myLatlng = new google.maps.LatLng(-25.363882,131.044922);
+       }
+        
+        var lat = 0;
+        var lng = 0;
+		if (navigator.geolocation) {
+           navigator.geolocation.getCurrentPosition(success);
+         } else {
+           alert("Geolocation is not supported by this browser.");
+         }
+        google.maps.event.addDomListener(window, 'load', initialize);
+        alert('a1');
+        var myLatlng = new google.maps.LatLng(lat, lng);
 		var mapOptions = {
 			zoom: 12,
 			center: myLatlng
