--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -19,6 +19,8 @@
       function success(position) {
         lat = position.coords.latitude;
         lng = position.coords.longitude;
+       
+        //var map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
       }
 
       function initialize() {
@@ -42,25 +44,27 @@
 		});
         // To add the marker to the map, call setMap();
 		marker{{loop.index}}.setMap(map);
+
         {% endfor %}
 
        }
         
         var lat = 0;
         var lng = 0;
-		if (navigator.geolocation) {
-           navigator.geolocation.getCurrentPosition(success);
-         } else {
-           alert("Geolocation is not supported by this browser.");
-         }
         google.maps.event.addDomListener(window, 'load', initialize);
-        alert('a1');
-        var myLatlng = new google.maps.LatLng(lat, lng);
-		var mapOptions = {
-			zoom: 12,
-			center: myLatlng
-		}
-		var map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
+        if (navigator.geolocation) {
+          navigator.geolocation.getCurrentPosition(success);
+        } else {
+          alert("Geolocation is not supported by this browser.");
+        }
+        var myLatlng = new google.maps.LatLng(53.4783796, -2.255681);
+        var mapOptions = {
+            zoom: 14,
+            center: myLatlng
+        }
+        var map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
+        map.setCenter(myLatlng);
+        
     </script>
   </head>
   <body>
