--- a/server/templates/thanks.html
+++ b/server/templates/thanks.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Test</title>
+        <title>eCitizen: Thanks!</title>
     </head>
     <body>
         <h1>Thanks</h1>
