--- a/server/templates/upload.html
+++ b/server/templates/upload.html
@@ -7,7 +7,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="styles.css">
-    <title>Upload a picture</title>
+    <title>eCitizen: Post a picture</title>
 </head>
 <body class="gradient">
     <div class="container-fluid">
