--- a/server/templates/map.html
+++ b/server/templates/map.html
@@ -73,6 +73,7 @@
     </script>
     <title>eCitizen: Map</title>
   </head>
+
   <body>
     <!-- NAVBAR -->
     <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -84,13 +85,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">eCitizen</a>
+          <a class="navbar-brand" href="/">eCitizen</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/map">map</a></li>
-            <li class="active"><a href="#">heat map</a></li>
-            <li><a href="/about">about</a></li>
+            <li><a href="/upload_shot"><span class="label label-success"><strong>+</strong></span> upload a picture</a></li>
+            <li class="active"><a href="#">map</a></li>
+            <li><a href="/heat">heat map</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -101,7 +102,7 @@
     <!-- FOOTER -->
     <div class="navbar-inverse navbar-fixed-bottom">
       <div class="inner" style="text-align: center; color: white;">
-        <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+        <p>Someone @ Great Uni Hackaton Manchester 2015.</p>
       </div>
     </div>
 
