--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <title>eCitizen: Heat-map</title>
+    <title>eCitizen: the conscientious citizen</title>
     <style>
       html, body, #map-canvas {
         height: 100%;
@@ -104,22 +104,18 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/upload_shot"><span class="label label-success"><strong>+</strong></span> upload a picture</a></li>
+          <li><a href="/upload_shot"><span class="label label-success"><strong>+</strong></span> upload a picture</a></li>
             <li><a href="/map">map</a></li>
-            <li class="active"><a href="#">heat map</a></li>
+            <li><a href="/heat">heat map</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
 
-    
-    <div id="panel" style="margin-top: 60px;">
-      <button onclick="toggleHeatmap()">Toggle Heatmap</button>
-      <button onclick="changeGradient()">Change gradient</button>
-      <button onclick="changeRadius()">Change radius</button>
-      <button onclick="changeOpacity()">Change opacity</button>
+    <!-- Docs page layout -->
+    <div class="container" style="margin-top:40px; background: url('/static/gfx/logo.png'); width: 1000px; height: 600px;">
+      
     </div>
-    <div id="map-canvas"></div>
     
     <div class="navbar-inverse navbar-fixed-bottom">
       <div class="inner" style="text-align: center; color: white;">
