--- a/server/templates/map.html
+++ b/server/templates/map.html
@@ -20,6 +20,7 @@
     <script type="text/javascript"
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAmUQ5EIxnPrGLan9LDADHK_TKPysi5jSA">
     </script>
+    
     <script type="text/javascript">
       function success(position) {
         lat = position.coords.latitude;
@@ -28,15 +29,28 @@
         //var map = new google.maps.Map(document.getElementById("map-canvas"), mapOptions);
       }
 
+      //default filter
+      var filter = "all";
+
+      //UPDATE USER PREFERENCES
+      function updateFilter(){
+        var elementSelect = document.getElementById("category");
+        filter = elementSelect.options[elementSelect.selectedIndex].value;
+        initialize();
+      }
+      //UPDATE USER PREFERENCES
+
       function initialize() {
         var map = new google.maps.Map(document.getElementById('map-canvas'),mapOptions);
         
         {% for s in records %}
         var myLatlng = new google.maps.LatLng({{s[4]}},{{s[3]}});
+        if("{{s[1]}}" == filter||filter=="all"){
         var marker{{loop.index}} = new google.maps.Marker({
             position: myLatlng,
             title:"{{s[2]}}"
         });
+
         google.maps.event.addListener(marker{{loop.index}}, 'click', function() {
         $.magnificPopup.open({
           items: {
@@ -49,6 +63,7 @@
         });
         // To add the marker to the map, call setMap();
         marker{{loop.index}}.setMap(map);
+      }// if closed
 
         {% endfor %}
 
@@ -76,7 +91,7 @@
 
   <body>
     <!-- NAVBAR -->
-        <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -89,23 +104,35 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-          <li><a href="/upload_shot"><span class="label label-success"><strong>+</strong></span> upload a picture</a></li>
-            <li><a href="/map">map</a></li>
+            <li><a href="/upload_shot"><span class="label label-success"><strong>+</strong></span> upload a picture</a></li>
+            <li class="active"><a href="#">map</a></li>
             <li><a href="/heat">heat map</a></li>
-			<li><a href="/stats">statistics</a></li>
+            <li><!--- dropdown menu-->
+     <div class="col-xs-12 col-sm-6 col-lg-8" style = "margin-top:17px; border-radius:5px;">
+       <select onChange = "updateFilter()" name="category" style = "border-radius:5px;"id="category">
+         <option value="all">All</option>
+         <option value="graffiti">Graffiti</option>
+         <option value="broken_streets">Broken Streets</option>
+         <option value="broken_labels">Broken labels</option>
+         <option value="fire">Fire</option>
+         <option value="lighting">Lighting</option>
+         <option value="garbage" style = "border-radius:5px;">Garbage</option>
+       </select>
+     </div>
+    <!--- dropdown menu--></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
     
     <div id="map-canvas"></div>
-
+    
     <!-- FOOTER -->
-<div class="navbar-inverse navbar-fixed-bottom">
+    <div class="navbar-inverse navbar-fixed-bottom">
       <div class="inner" style="text-align: center; color: white;">
-        <p>Michele, Nikola, Veselin and Yazan @ Great Uni Hackaton Manchester 2015.</p>
+        <p>Someone @ Great Uni Hackaton Manchester 2015.</p>
       </div>
-    </div>  
+    </div>
 
   </body>
 </html>
