--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -121,7 +121,7 @@
     
     <div class="navbar-inverse navbar-fixed-bottom">
       <div class="inner" style="text-align: center; color: white;">
-        <p>Michele, Nikola, Veselin and Yazan @ Great Uni Hackaton Manchester 2015. -- SENDGRID</p>
+        <p>Michele, Nikola, Veselin and Yazan @ Great Uni Hackaton Manchester 2015.</p>
       </div>
     </div>  
 
