--- a/server/templates/map.html
+++ b/server/templates/map.html
@@ -8,6 +8,7 @@
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <style type="text/css">
       html, body, #map-canvas { height: 100%; margin: 0; padding: 0;}
+      boby {padding-top: 70px;}
     </style>
     <!-- Magnific Popup core CSS file -->
     <link rel="stylesheet" href="/static/css_js/magnific-popup.css"> 
@@ -132,7 +133,7 @@
     <!-- FOOTER -->
     <div class="navbar-inverse navbar-fixed-bottom">
       <div class="inner" style="text-align: center; color: white;">
-        <p>Someone @ Great Uni Hackaton Manchester 2015.</p>
+        <p>Michele, Nikola, Veselin and Yazan @ @ Great Uni Hackaton Manchester 2015.</p>
       </div>
     </div>
 
