--- a/server/templates/contributors.html
+++ b/server/templates/contributors.html
@@ -23,13 +23,15 @@
         padding: 5px;
         border: 1px solid #999;
       }
+      body {
+        padding-top: 70px;
+      }
     </style>
 	 </head>
 
   <body>
 
-        <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
+      <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
@@ -41,61 +43,46 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-          <li><a href="/upload_shot"><span class="label label-success"><strong>+</strong></span> upload a picture</a></li>
+            <li><a href="/upload_shot"><span class="label label-success"><strong>+</strong></span> upload a picture</a></li>
             <li><a href="/map">map</a></li>
             <li><a href="/heat">heat map</a></li>
-			<li><a href="/stats">statistics</a></li>
-			<li><a href="/best_users">best users</a></li>
+  			    <li><a href="/stats">statistics</a></li>
+  			    <li><a href="/best_users">best users</a></li>
           </ul>
         </div><!--/.nav-collapse -->
-      </div>
     </nav>
 
-   <h2 style="margin-top:100px;margin-left:20px">Top users</h2>
-   
-   <h3 style="margin-left:20px">Graffiti</h3>
-   <div style="margin-left:20px">
-   {% for g in graffiti %}
-   {{loop.index}} {{g[1]}} : {{g[2]}}<br/>
-   {% endfor %}
+    <div class="container">
+    <h1>Top users</h1>
+    <hr>
+
+   <form method="get" action="/best_users">
+   Select a category:
+   <select name="category" id="category" onchange="this.form.submit()">
+      <option value="all" {% if selcat == "all" %}selected{% endif %}>All</option>
+      <option value="graffiti" {% if selcat == "graffiti" %}selected{% endif %}>Graffiti</option>
+      <option value="broken_streets" {% if selcat == "broken_streets" %}selected{% endif %}>Broken Streets</option>
+      <option value="broken_labels" {% if selcat == "broken_labels" %}selected{% endif %}>Broken labels</option>
+      <option value="fire" {% if selcat == "fire" %}selected{% endif %}>Fire</option>
+      <option value="lighting" {% if selcat == "lighting" %}selected{% endif %}>Lighting</option>
+      <option value="garbage" {% if selcat == "garbage" %}selected{% endif %}>Garbage</option>
+    </select>
+    </form>
+
+    <h2>{{category}}</h2>
+     <div style="margin-left:20px">
+     {% for user in records %}
+     {{user[0]}}
+     <div class="progress">
+        <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="{{user[1]*100/maximum|int}}" aria-valuemin="0" aria-valuemax="100" style="width: {{user[1]*100/maximum|int}}%;">{{user[1]}} posts
+        </div>
+      </div>
+     {% endfor %}
+    </ul>
    </div>
-   
-   <h3 style="margin-left:20px">Broken Streets</h3>
-   <div style="margin-left:20px">
-   {% for g in broken_streets %}
-   {{loop.index}} {{g[1]}} : {{g[3]}}<br/>
-   {% endfor %}
-   </div>
-   
-   <h3 style="margin-left:20px">Broken Labels</h3>
-   <div style="margin-left:20px">
-   {% for g in broken_labels %}
-   {{loop.index}} {{g[1]}} : {{g[4]}}<br/>
-   {% endfor %}
-   </div>
-   
-   <h3 style="margin-left:20px">Fire</h3>
-   <div style="margin-left:20px">
-   {% for g in fire %}
-   {{loop.index}} {{g[1]}} : {{g[5]}}<br/>
-   {% endfor %}
-   </div>
-   
-   <h3 style="margin-left:20px">Lightning</h3>
-   <div style="margin-left:20px">
-   {% for g in lightning %}
-   {{loop.index}} {{g[1]}} : {{g[6]}}<br/>
-   {% endfor %}
-   </div>
-   
-   <h3 style="margin-left:20px">Garbage</h3>
-   <div style="margin-left:20px;margin-bottom:100px">
-   {% for g in garbage %}
-   {{loop.index}} {{g[1]}} : {{g[7]}}<br/>
-   {% endfor %}
-   </div>
+ </div>
     
- <div class="navbar-inverse navbar-fixed-bottom">
+    <div class="navbar-inverse navbar-fixed-bottom">
       <div class="inner" style="text-align: center; color: white;">
         <p>Michele, Nikola, Veselin and Yazan @ Great Uni Hackaton Manchester 2015.</p>
       </div>
