--- a/server/templates/thanks.html
+++ b/server/templates/thanks.html
@@ -104,6 +104,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
+          <li><a href="/upload_shot"><span class="label label-success"><strong>+</strong></span> upload a picture</a></li>
             <li><a href="/map">map</a></li>
             <li><a href="/heat">heat map</a></li>
             <li><a href="/about">about</a></li>
@@ -120,7 +121,7 @@
     
     <div class="navbar-inverse navbar-fixed-bottom">
       <div class="inner" style="text-align: center; color: white;">
-        <p>Someone @ Great Uni Hackaton Manchester 2015.</p>
+        <p>Michele, Nikola, Veselin and Yazan @ Great Uni Hackaton Manchester 2015.</p>
       </div>
     </div>  
 
