--- a/server/templates/map.html
+++ b/server/templates/map.html
@@ -76,7 +76,7 @@
 
   <body>
     <!-- NAVBAR -->
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -89,9 +89,10 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/upload_shot"><span class="label label-success"><strong>+</strong></span> upload a picture</a></li>
-            <li class="active"><a href="#">map</a></li>
+          <li><a href="/upload_shot"><span class="label label-success"><strong>+</strong></span> upload a picture</a></li>
+            <li><a href="/map">map</a></li>
             <li><a href="/heat">heat map</a></li>
+			<li><a href="/stats">statistics</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -100,11 +101,11 @@
     <div id="map-canvas"></div>
 
     <!-- FOOTER -->
-    <div class="navbar-inverse navbar-fixed-bottom">
+<div class="navbar-inverse navbar-fixed-bottom">
       <div class="inner" style="text-align: center; color: white;">
-        <p>Someone @ Great Uni Hackaton Manchester 2015.</p>
+        <p>Michele, Nikola, Veselin and Yazan @ Great Uni Hackaton Manchester 2015.</p>
       </div>
-    </div>
+    </div>  
 
   </body>
 </html>
