--- a/server/templates/stats.html
+++ b/server/templates/stats.html
@@ -97,7 +97,7 @@
 	
 	</body>
 	
-	 <nav class="navbar navbar-inverse navbar-fixed-top">
+	     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -106,15 +106,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">eCitizen</a>
+          <a class="navbar-brand" href="/">eCitizen</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
+          <li><a href="/upload_shot"><span class="label label-success"><strong>+</strong></span> upload a picture</a></li>
             <li><a href="/map">map</a></li>
-            <li ><a href="/heat">heat map</a></li>
-			<li><a href="#" class="active">stats</a></li>
-            <li><a href="/about">about</a></li>
-			
+            <li><a href="/heat">heat map</a></li>
+			<li><a href="/stats">statistics</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -125,10 +124,10 @@
 	 <div id="piechart" style="width: 900px; height: 500px;"></div>
 
     <!-- FOOTER -->
-    <div class="navbar-inverse navbar-fixed-bottom">
+<div class="navbar-inverse navbar-fixed-bottom">
       <div class="inner" style="text-align: center; color: white;">
-        <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+        <p>Michele, Nikola, Veselin and Yazan @ Great Uni Hackaton Manchester 2015.</p>
       </div>
-    </div>
+    </div>  
 </body>
 </html>
