--- a/server/templates/heat_map.html
+++ b/server/templates/heat_map.html
@@ -91,7 +91,7 @@
 
   <body>
 
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -104,9 +104,10 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/upload_shot"><span class="label label-success"><strong>+</strong></span> upload a picture</a></li>
+          <li><a href="/upload_shot"><span class="label label-success"><strong>+</strong></span> upload a picture</a></li>
             <li><a href="/map">map</a></li>
-            <li class="active"><a href="#">heat map</a></li>
+            <li><a href="/heat">heat map</a></li>
+			<li><a href="/stats">statistics</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -121,9 +122,9 @@
     </div>
     <div id="map-canvas"></div>
     
-    <div class="navbar-inverse navbar-fixed-bottom">
+ <div class="navbar-inverse navbar-fixed-bottom">
       <div class="inner" style="text-align: center; color: white;">
-        <p>Someone @ Great Uni Hackaton Manchester 2015.</p>
+        <p>Michele, Nikola, Veselin and Yazan @ Great Uni Hackaton Manchester 2015.</p>
       </div>
     </div>  
 
