--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -91,7 +91,7 @@
 
   <body>
 
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+        <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -107,6 +107,7 @@
           <li><a href="/upload_shot"><span class="label label-success"><strong>+</strong></span> upload a picture</a></li>
             <li><a href="/map">map</a></li>
             <li><a href="/heat">heat map</a></li>
+			<li><a href="/stats">statistics</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -119,7 +120,7 @@
     
     <div class="navbar-inverse navbar-fixed-bottom">
       <div class="inner" style="text-align: center; color: white;">
-        <p>Someone @ Great Uni Hackaton Manchester 2015.</p>
+        <p>Michele, Nikola, Veselin and Yazan @ Great Uni Hackaton Manchester 2015.</p>
       </div>
     </div>  
 
