--- a/server/templates/map.html
+++ b/server/templates/map.html
@@ -107,6 +107,7 @@
             <li><a href="/upload_shot"><span class="label label-success"><strong>+</strong></span> upload a picture</a></li>
             <li class="active"><a href="#">map</a></li>
             <li><a href="/heat">heat map</a></li>
+			<li><a href="/stats">statistics</a></li>
             <li><!--- dropdown menu-->
      <div class="col-xs-12 col-sm-6 col-lg-8" style = "margin-top:17px; border-radius:5px;">
        <select onChange = "updateFilter()" name="category" style = "border-radius:5px;"id="category">
