clicker in upload

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -115,7 +115,8 @@
     </nav>
 
     <!-- Docs page layout -->
-    <div class="container" style="margin-top:40px; background: url('/static/gfx/logo.png'); width: 1000px; height: 600px;">
+    <!--<div class="container" style="margin-top:40px; background: url('/static/gfx/logo.png'); width: 1000px; height: 600px;">-->
+    <img width="100%" style="padding-bottom: 25px" src="/static/gfx/logo.png" />
       
     </div>
     
