--- a/server/templates/stats.html
+++ b/server/templates/stats.html
@@ -96,8 +96,7 @@
 	
 	
 	</body>
-	
-	     <nav class="navbar navbar-inverse navbar-fixed-top">
+	  <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -110,13 +109,13 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-          <li><a href="/upload_shot"><span class="label label-success"><strong>+</strong></span> upload a picture</a></li>
+            <li><a href="/upload_shot">report <span class="label label-success label-as-badge">+1</span></a></li>
             <li><a href="/map">map</a></li>
             <li><a href="/heat">heat map</a></li>
-			<li><a href="/stats">statistics</a></li>
-			<li><a href="/best_users">best users</a></li>
+            <li class="active"><a href="/stats">statistics</a></li>
+            <li><a href="/best_users">best users</a></li>
           </ul>
-        </div><!--/.nav-collapse -->
+        </div>
       </div>
     </nav>
     
