--- a/server/templates/upload.html
+++ b/server/templates/upload.html
@@ -87,6 +87,9 @@
         background-color: white !important;
         cursor: text !important;
       }
+      .label-as-badge {
+        border-radius: 1em;
+      }
     </style>
     <title>eCitizen: Post a picture</title>
 </head>
@@ -104,13 +107,13 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-          <li><a href="/upload_shot"><span class="label label-success"><strong>+</strong></span> upload a picture</a></li>
+          <li class="active"><a href="/upload_shot">report <span class="label label-success label-as-badge">+1</span></a></li>
             <li><a href="/map">map</a></li>
             <li><a href="/heat">heat map</a></li>
             <li><a href="/stats">statistics</a></li>
             <li><a href="/best_users">best users</a></li>
           </ul>
-        </div><!--/.nav-collapse -->
+        </div>
       </div>
     </nav>
     <div class="container-fluid">
