--- a/server/templates/contributors.html
+++ b/server/templates/contributors.html
@@ -83,8 +83,11 @@
 
    </div>
  </div>
-      <div class="inner" style="text-align: center; color: white;">
-        <p>Michele, Nikola, Veselin and Yazan @ Great Uni Hackaton Manchester 2015.</p>
+
+      <div class="navbar-inverse navbar-fixed-bottom">
+        <div style="text-align: center; color: white;">
+          <p class="small">Michele, Nikola, Veselin and Yazan @ GreatUniHack, Manchester, 2015.</p>
+        </div>
       </div>
 
   </body>
