--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -115,16 +115,13 @@
     </nav>
 
     <!-- Docs page layout -->
-    <!--<div class="container" style="margin-top:40px; background: url('/static/gfx/logo.png'); width: 1000px; height: 600px;">-->
     <img width="100%" style="padding-bottom: 25px" src="/static/gfx/logo.png" />
-      
-    </div>
     
     <div class="navbar-inverse navbar-fixed-bottom">
-      <div class="inner" style="text-align: center; color: white;">
-        <p>Michele, Nikola, Veselin and Yazan @ Great Uni Hackaton Manchester 2015.</p>
+      <div style="text-align: center; color: white;">
+        <p class="small">Michele, Nikola, Veselin and Yazan @ GreatUniHack, Manchester, 2015.</p>
       </div>
-    </div>  
+    </div> 
 
   </body>
 </html>
