--- a/server/templates/upload.html
+++ b/server/templates/upload.html
@@ -116,6 +116,7 @@
         </div>
       </div>
     </nav>
+
     <div class="container-fluid">
         <div class="page-header" style="margin-top:80px"><h1>Share a problem</h1></div>
         <section>
@@ -175,14 +176,14 @@
               <button type="submit" class="btn btn-success">Share</button>
               <button type="button" class="btn btn">Clear</button>
             </div>
-          </div>
-        </form>
-      </section>
-    </div>
-	<div class="navbar-inverse navbar-fixed-bottom">
-      <div class="inner" style="text-align: center; color: white;">
-        <p>Michele, Nikola, Veselin and Yazan @ Great Uni Hackaton Manchester 2015.</p>
+          </form>
+        </section>
       </div>
-    </div>  
-</body>
+
+      <div class="navbar-inverse navbar-fixed-bottom">
+        <div style="text-align: center; color: white;">
+          <p class="small">Michele, Nikola, Veselin and Yazan @ GreatUniHack, Manchester, 2015.</p>
+        </div>
+      </div>
+  </body>
 </html>
