--- a/server/templates/map.html
+++ b/server/templates/map.html
@@ -128,8 +128,8 @@
     
     <!-- FOOTER -->
     <div class="navbar-inverse navbar-fixed-bottom">
-      <div class="inner" style="text-align: center; color: white;">
-        <p>Michele, Nikola, Veselin and Yazan @ @ Great Uni Hackaton Manchester 2015.</p>
+      <div style="text-align: center; color: white;">
+        <p class="small">Michele, Nikola, Veselin and Yazan @ GreatUniHack, Manchester, 2015.</p>
       </div>
     </div>
 
