--- a/server/templates/stats.html
+++ b/server/templates/stats.html
@@ -124,10 +124,11 @@
 	 <div id="piechart" style="width: 900px; height: 500px;"></div>
 
     <!-- FOOTER -->
-<div class="navbar-inverse navbar-fixed-bottom">
-      <div class="inner" style="text-align: center; color: white;">
-        <p>Michele, Nikola, Veselin and Yazan @ Great Uni Hackaton Manchester 2015.</p>
+    <div class="navbar-inverse navbar-fixed-bottom">
+      <div style="text-align: center; color: white;">
+        <p class="small">Michele, Nikola, Veselin and Yazan @ GreatUniHack, Manchester, 2015.</p>
       </div>
-    </div>  
+    </div>
+      
 </body>
 </html>
